startpage/01_deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: startpage
  namespace: web
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: startpage
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - startpage
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: front-end
        image: registry.analbeard.com/amd64/startpage:2d147ae
        ports:
        - name: http-port
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
      imagePullSecrets:
      - name: private-registry-auth
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: startpage-cache
  namespace: web
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: startpage-cache
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - startpage-cache
            topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: varnish-config
        configMap:
          name: startpage-vcl
          items:
          - key: default.vcl
            path: default.vcl
      containers:
      - name: varnish
        image: hermsi/alpine-varnish:6.1
        volumeMounts:
        - name: varnish-config
          mountPath: /etc/varnish/
        ports:
        - name: varnish-port
          containerPort: 8080
