startpage/cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startpage-cache
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: startpage
    app.kubernetes.io/component: startpage-cache
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: startpage-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/component: startpage-cache
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - startpage-cache
            topologyKey: "kubernetes.io/hostname"
      serviceAccount: startpage-cache
      serviceAccountName: startpage-cache
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: varnish
        image: hermsi/alpine-varnish:6.1
        volumeMounts:
        - name: varnish-config
          mountPath: /etc/varnish/
        ports:
        - name: varnish-port
          containerPort: 8080
      volumes:
      - name: varnish-config
        configMap:
          name: startpage-cache-vcl
          items:
          - key: default.vcl
            path: default.vcl
