startpage/startpage-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startpage-web
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: startpage
    app.kubernetes.io/component: startpage-web
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: startpage-web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: startpage-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - startpage
            topologyKey: "kubernetes.io/hostname"
      serviceAccount: startpage-web
      serviceAccountName: startpage-web
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
      - name: front-end
        image: registry.analbeard.com/amd64/startpage:e855d87
        ports:
        - name: http-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
      imagePullSecrets:
      - name: private-registry-auth
