startpage/02_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: startpage
  namespace: web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: startpage
---
apiVersion: v1
kind: Service
metadata:
  name: startpage-cache
  namespace: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: startpage-cache
