startpage/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: startpage-cache
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: simonweald-web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: startpage-cache
