startpage/startpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: startpage
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: startpage
    app.kubernetes.io/component: startpage-web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/component: startpage-web
